# pypostcards

./: .gitignore  Dockerfile  Makefile  README.md  postcards.conf  postcards.conf.sample  pyproject.toml
docker/: docker-pypostcards.service  postcards.conf  systemd.conf
src/flpostcards/: __init__.py
src/flpostcards/blueprints/api/: __init__.py
src/flpostcards/blueprints/home/: __init__.py
src/flpostcards/blueprints/map/: __init__.py
src/flpostcards/static/css/: style.css
src/flpostcards/static/js/: fullscreen.js  map.js  slideshow.js  travel-slideshow.js  wake-lock.js
src/flpostcards/templates/: base.html
src/flpostcards/templates/card/: detail.html
src/flpostcards/templates/gallery/: index.html
src/flpostcards/templates/home/: index.html
src/flpostcards/templates/map/: index.html
src/flpostcards/templates/slideshow/: index.html
src/flpostcards/templates/travel/: detail.html
src/flpostcards/translations/en/LC_MESSAGES/: flpostcards.po
src/flpostcards/translations/fr/LC_MESSAGES/: flpostcards.po
src/libpostcards/: model.py
src/libpostcards/translations/en/LC_MESSAGES/: libpostcards.po
src/libpostcards/translations/fr/LC_MESSAGES/: libpostcards.po
src/tkpostcards/: __init__.py  tkmanager.py  tkscan.py
src/tkpostcards/libs/: backup.py  remotesync.py  similar.py  travel.py
src/tkpostcards/scripts/: tktools.py
src/tkpostcards/translations/en/LC_MESSAGES/: tkpostcards.po
src/tkpostcards/translations/fr/LC_MESSAGES/: tkpostcards.po
