[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "pypostcards"
authors = [
  {name = "bibi21000", email = "bibi21000@gmail.com"},
]
maintainers = [
  {name = "bibi21000", email = "bibi21000@gmail.com"}
]
description = "Scan, manage and publish your postcards collection"
version = "2.0.7"
requires-python = ">=3.9"
dependencies = [
    "pillow",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]

flask = [
    "Flask",
    "Flask-Babel",
    "Werkzeug",
    "Jinja2",
    "MarkupSafe",
    "Flask-Cachecontrol",
    "itsdangerous",
]

tkinter = [
    "click",
    "pytesseract",
    "deskew",
    "opencv-python",
    "click",
    "numpy",
    "tqdm",
    "zstandard",
]

ocr = [
    "python-doctr[torch]",
    "transformers",
    "torch",
    "torchvision",
    "wordfreq",
    "kraken",
]

similar = [
    "tqdm",
    "requests",
    "pillow",
    "imagehash",
    "torch",
    "torchvision",
    "open-clip-torch",
]

scan = [
    "numpy"
]

travel = [
    "ortools"
]

prod = [
    "gunicorn>=23.0"
]

dev = [
    "build",
    "pytest",
    "coverage",
    "ruff",
    "Babel",
]

[project.urls]
HomePage = "https://github.com/bibi21000/pypostcards"
Issues = "https://github.com/bibi21000/pypostcards/issues"

[project.scripts]
tktools = "tkpostcards.scripts.tktools:cli"
tkmanager = "tkpostcards.tkmanager:run"
tkscan = "tkpostcards.tkscan:run"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.babel]
domain = "flpostcards"
mapping_file = "babel.cfg"

[tool.setuptools.package-data]
tkpostcards = [
    "translations/**/*.po",
    "translations/**/*.mo",
]
flpostcards = [
    "translations/**/*.po",
    "translations/**/*.mo",
    "templates/**/*",
    "static/**/*",
]
libpostcards = [
    "translations/**/*.po",
    "translations/**/*.mo",
]

